# meshbuilder

./: .gitignore  README.md  dev  setup.sh
backend/: main.py  model.py  pyproject.toml  setup_triposr.sh  torchmcubes_compat.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MeshViewer.tsx
